Sub Categories added

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="bg-light dark:bg-dark">
   <app-root></app-root>
 </body>
 </html>
