--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       else document.documentElement.classList.remove('dark')
   </script>
 </head>
-<body class="bg-light dark:bg-dark">
+<body class="">
   <app-root></app-root>
 </body>
 </html>
