--- a/src/index.html
+++ b/src/index.html
@@ -22,5 +22,6 @@
 </head>
 <body class="">
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
