--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link rel="icon" type="image/png" href="assets/images/arzyab144.png">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#fff" />
 
   <script>
       function getCookies(name) {
