--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>قیمت ارز و طلا</title>
+  <title>ارزیاب | مرجع قیمت بازارها</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+  <meta name="description" content="قیمت لحظه‌ای ارز، طلا، سکه، ارز دیجیتال، فلزات گرانبها، فلزات پایه و بازار کالاها در ارزیاب؛ مرجع دقیق و به‌روز قیمت بازارها.">
   <link rel="icon" type="image/png" href="assets/images/arzyab144.png">
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#fff" />
 
   <script>
       function getCookies(name) {
@@ -21,6 +20,8 @@
       if (theme === 'dark') document.documentElement.classList.add('dark');
       else document.documentElement.classList.remove('dark')
   </script>
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body class="">
   <app-root></app-root>
