App icon other size added

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <meta name="description" content="قیمت لحظه‌ای ارز، طلا، سکه، ارز دیجیتال، فلزات گرانبها، فلزات پایه و بازار کالاها در ارزیاب؛ مرجع دقیق و به‌روز قیمت بازارها.">
-  <link rel="icon" type="image/png" href="assets/images/arzyab144.png">
+  <link rel="icon" type="image/png" sizes="16×16" href="assets/icons/main/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32×32" href="assets/icons/main/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="48×48" href="assets/icons/main/favicon-48x48.png">
+  <link rel="icon" type="image/png" sizes="96×96" href="assets/icons/main/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="144×144" href="assets/icons/main/favicon-144x144.png">
+  <link rel="icon" type="image/png" sizes="192×192" href="assets/icons/main/favicon-192x192.png">
+  <link rel="icon" type="image/png" sizes="512×512" href="assets/icons/main/favicon-512x512.png">
 
   <script>
       function getCookies(name) {
